<resources>
    <string name="app_name">Ejercicio0401</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="rd_hombre">Hombre</string>
    <string name="rd_mujer">Mujer</string>
    <string name="chb_carnet">Carnet de conducir</string>
    <string name="txt_spinner">Indica tu mes de nacimiento</string>
    <string name="btn_info">Ver datos</string>
</resources>